# ds-watch

./: .gitignore  Contributors.md  LICENSE  README.md  config.example.toml  pyproject.toml
contrib/: ds-watch.service  ds-watch.timer
events/dev/2026/: 2026-07-07.jsonl  2026-07-08.jsonl  2026-07-09.jsonl  2026-07-10.jsonl  2026-07-13.jsonl  2026-07-15.jsonl  2026-07-16.jsonl  2026-07-17.jsonl  2026-07-18.jsonl  2026-07-20.jsonl  2026-07-21.jsonl  2026-07-22.jsonl  (+1 more)
src/ds_watch/: alert.py  cli.py  config.py  czds_client.py  diff.py  extract.py  publish.py  store.py
stats/dev/: 2026-07-04.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
stats/info/: 2026-07-04.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
stats/org/: 2026-07-04.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
tests/: test_alert.py  test_diff.py  test_extract.py  test_pipeline.py
(+84 files in other folders)
